frontend/test/should_fail/index_asArrayDescending_edge_missing_where_index_expected.grg
rule i(ref s:array<Edge>) {
	if{ edgesFromIndexAsArrayDescending(s).size() > 0; }
	
	modify {
	}
}
